Added links to README file.

--- a/style.css
+++ b/style.css
@@ -194,7 +194,8 @@ blockquote {
   /* Full-width containers */
     .container {
       width: 70%;
-      padding-left: 30px;
+      padding-left: 3
+      0px;
       padding-right: 10px;
     }
   
